--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ main{
 
 .lojas {
     width: 35%;
-    margin: 2rem;
+    margin-top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,15 +68,20 @@ main{
 }
 
 .lojas img{
-    width: 2.5rem;
-    height: 2.5rem;
-    padding: .5rem;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
 }
 
 .lojas ul{
     display: flex;
     justify-content: space-between;
-    margin: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .lojas ul li{
