--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,26 @@ main{
     font-family: "Poppins", sans-serif;
 }
 
-.lojas img{
+.amazon img{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+
+.olx img{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+.cea img{
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
