--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ main{
 }
 
 .perfil{
-    width: 25%;
+    width: 35%;
     margin-top: 1rem;
     display: flex;
     justify-content: center;
@@ -41,6 +41,10 @@ main{
     flex-wrap: wrap;
     text-align: center;   
     font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: bold; 
+    font-size: 1.2rem;
+    color: black;
 }
 
 .perfil img{
