--- a/css/pagamentos.css
+++ b/css/pagamentos.css
@@ -108,14 +108,14 @@ main a {
     align-items: center;
     margin: 2rem auto; 
     text-decoration: none; 
-    border: 1px solid #368abf; 
+    border: 1px solid #4CAF50; 
     border-radius: 8px;
     padding: 1rem 2rem;
     width: fit-content;
     font-weight: bold;
     font-family: "Poppins", sans-serif;
     color: black;  
-    background-color: #368abf;
+    background-color: #4CAF50;
     transition: 0.3s ease;
 }
 
@@ -123,7 +123,7 @@ main a h2 {
     margin: 0;
     font-size: 1rem;
     font-family: "Poppins", sans-serif;
-    color: black;
+    color: white;
 }
 
 
