--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -40,13 +40,29 @@ header img{
     width: fit-content;
     max-width: 85%;
     font-size: 14px;
+    font-family: "Poppins", sans-serif;
 }
 
+.user_bubble {
+    background-color: #368abf;
+
+    padding: 10px 14px;
+    border-radius: 16px;
+    margin-bottom: 10px;
+    width: fit-content;
+    max-width: 80%;
+    margin-left: auto;
+    font-size: 14px;
+    font-family: "Poppins", sans-serif;
+}
+
+
 .options {
-    margin-top: 24px;
+    margin-top: 7rem;
     display: flex;
     flex-direction: column;
     gap: 14px;
+    font-family: "Poppins", sans-serif;
 }
 
 .escolha {
@@ -61,6 +77,7 @@ header img{
     font-weight: 500;
     cursor: pointer;
     text-align: left;
+    font-family: "Poppins", sans-serif;
 }
   
 .escolha img {
@@ -80,7 +97,8 @@ header img{
     background-color: #f9f9f9;
     border-top: 1px solid #ddd;
     box-sizing: border-box; /* ✅ garante que padding entre no cálculo de largura */
-    gap: 8px; 
+    gap: 8px;
+    font-family: "Poppins", sans-serif; 
 }
 
 .chat input {
@@ -92,6 +110,7 @@ header img{
     background-color: #eee;
     font-size: 14px;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
   }
   
   .chat button {
