chatbot js feito

--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -36,6 +36,8 @@ header img{
     background-color: #E6F0FF;
     padding: 10px 14px;
     border-radius: 16px;
+    margin-top: 1rem;
+    margin-left: 0.5rem;
     margin-bottom: 10px;
     width: fit-content;
     max-width: 85%;
